2005-07-08  Keith Packard  <keithp@keithp.com>

	* .cvsignore:
	* src/.cvsignore:
	Add .cvsignore files

2005-06-09  Alexander Gottwald  <ago@freedesktop.org>

	* src/Makefile.am: 
	Use $(top_srcdir)/... instead of $(top_builddir)/... in INCLUDES
	Added $(top_srcdir) to INCLUDES 

2004-11-22  Carl Worth  <cworth@cworth.org>

	* configure.ac: Remove AC_CONFIG_AUX_DIR (it was in the wrong
	place for automake-1.9, and it was set to the default value
	anyway).

2004-10-18  Noah Levitt  <nlevitt@columbia.edu>

	* configure.ac: Export RENDER_CFLAGS.

2004-09-05  Keith Packard  <keithp@keithp.com>

	* configure.ac:
	Move AC_CONFIG_AUX_DIR above AM_INIT_AUTOMAKE to make 
	automake 1.9 happy

2004-07-29  Keith Packard  <keithp@keithp.com>

	* Makefile.am:
	* Xrender.h:
	* configure.ac:
	Update to protocol 0.9 which includes RenderAddTraps request

2004-04-10  Keith Packard  <keithp@keithp.com>

	reviewed by: Mark Ashley <mark@ibiblio.org>

	* Xrenderint.h:
	Solaris appears to need <string.h> included to compile
	this library.  Who knows.  It seems harmless enough,
	and the configure script already detected it's presence,
	so we just included it whenever available.

2004-02-03  Jim Gettys  <jg@freedesktop.org>

	* AUTHORS: Get a author's list going.

2004-01-15  Daniel Stone  <daniel@fooishbar.org>
	* Tag release 0.8.4 for first freedesktop.org clientside lib release.

2004-01-15  Harold L Hunt II <huntharo@msu.edu>
	* Makefile.am: Pass -no-undefined to libtool via LDFLAGS.

2003-12-12  Keith Packard  <keithp@keithp.com>

	* configure.ac:
	* xrender.pc.in:
	Use Requires: in xrender.pc when x11.pc exists

2003-06-08 10:56  keithp

	* Filter.c, Makefile.am, Xrender.c, Xrenderint.h, configure.ac:
	Bail on bogus Xsun servers, compile with -DXTHREADS if necessary,
	get rid of unecessary cast to XRenderInfo *

2003-05-06 09:05  branden

	* ChangeLog: Huh.  Did Keith tag xrender-0_8_2 *before* running
	cvs2cl?  Running it again.

2003-05-05 20:56  keithp
