@@ -1,3 +1,11 @@
+2005-11-19  Kevin E. Martin  <kem-at-freedesktop-dot-org>
+
+	* xrender.pc.in:
+	Update pkgconfig files to separate library build-time dependencies
+	from application build-time dependencies.
+	* configure.ac:
+	Update dependencies to work with separate build roots.
+
 2005-07-08  Keith Packard  <keithp@keithp.com>
 
 	* .cvsignore:
